--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,8 +17,6 @@ a {
   box-sizing: border-box;
 }
 
-@font-face {
-  font-family: "burtons";
-  src: url("/Burtons.otf") format("opentype");
-  font-display: swap;
+html {
+    scroll-behavior: smooth;
 }
