--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ html,
 body {
   padding: 0;
   margin: 0;
+  background: #111827;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -19,4 +20,17 @@ a {
 
 html {
     scroll-behavior: smooth;
+}
+
+
+.site-container {
+    width: 90%;           
+    max-width: 800px;   
+    margin-left: auto;   
+    margin-right: auto; 
+    margin-top: 30px;
+    margin-bottom: 30; 
+    padding: 20px;       
+    border: 1px solid #ccc; 
+    background-color: bg-gray-900; 
 }
