--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,8 +5,7 @@ body {
   padding: 0;
   margin: 0;
   background: #111827;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: inherit;
 }
 
 a {
@@ -24,13 +23,42 @@ html {
 
 
 .site-container {
+    border-radius:15px;
     width: 90%;           
     max-width: 800px;   
     margin-left: auto;   
     margin-right: auto; 
     margin-top: 30px;
-    margin-bottom: 30; 
+    margin-bottom: 30px; 
     padding: 20px;       
     border: 1px solid #ccc; 
-    background-color: bg-gray-900; 
+    background-color: #111827; 
+}
+
+.trans-container {
+    border-radius:8px;
+    width: 90%;           
+    max-width: 800px;   
+    margin-left: auto;   
+    margin-right: auto; 
+    margin-top: 30px;
+    margin-bottom: 30px; 
+    padding: 20px;       
+    background-color: #111827; 
+    border: .2px solid #111827; 
+}
+
+.trans-container:hover {
+    background-color: rgb(0 0 0 / 0.5);
+    border-top: .2px solid #b3abab; 
+
+}
+
+
+.second-half-text {
+    /* Pushes content to start after the first 50% of the container */
+    margin-left: 50%;
+    /* Ensures the text itself only takes up the remaining space */
+    width: 50%; 
+    padding: 10px;
 }
