--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,7 +49,7 @@ html {
 }
 
 .trans-container:hover {
-    background-color: rgb(0 0 0 / 0.5);
+    background-color: none;
     border-top: .2px solid #b3abab; 
 
 }
