--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,18 +40,29 @@ html {
     width: 90%;           
     max-width: 800px;   
     margin-left: auto;   
-    margin-right: auto; 
-    margin-top: 30px;
-    margin-bottom: 30px; 
+    margin-right: auto;  
     padding: 20px;       
     background-color: #111827; 
-    border: .2px solid #111827; 
+    border: .1px solid #111827; 
 }
 
 .trans-container:hover {
-    background-color: none;
-    border-top: .2px solid #b3abab; 
+    background-color: #FFFFFF14;
+    border-top: .1px solid #b3abab; 
+}
 
+.mini-container {
+    border-radius: 32px;
+    width: 90%;
+    max-width: 100px;   
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 3px;
+    margin-bottom: 3px; 
+    padding: 3px;       
+    background-color: #0F766E4D; 
+    border: .2px solid #111827; 
+    text-align: center;
 }
 
 
