--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,7 +40,9 @@ html {
     width: 90%;           
     max-width: 800px;   
     margin-left: auto;   
-    margin-right: auto;  
+    margin-right: auto; 
+    margin-top: 30px;
+    margin-bottom: 30px; 
     padding: 20px;       
     background-color: #111827; 
     border: .1px solid #111827; 
